FullQa New/src/objects/Partner_Contacts_Trained__c.object
<CustomObject>
    <description>To record all contacts that have been trained via the partner Campaigns</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Partner_Contact_Training</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Partner_Contact_Training</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Complete_Date__c</fullName>
        <label>Training Complete Date</label>
        <type>Date</type>
    </fields>
    <label>(Deprecated) Partner Contacts Trained</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Partner Contact Trainings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Contacts Trained</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>